--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 pytest = "*"
 
 [packages]
-requests = "*"
-pandas = "*"
+selenium = "*"
+flask-restful = "*"
 
 [requires]
 python_version = "3.7"
