--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
-flask-restful==0.3.8
-flask==1.1.2
+aniso8601==8.0.0
+attrs==19.3.0
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.8
+Flask-RESTful==0.3.8
+importlib-metadata==1.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+more-itertools==8.3.0
+packaging==20.4
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.7
+pytest==5.4.2
+pytz==2020.1
 selenium==3.141.0
+six==1.15.0
+urllib3==1.25.9
+wcwidth==0.1.9
+Werkzeug==1.0.1
+zipp==3.1.0
